All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/OptiMax_Error_Email2__c.field-meta.xml
<CustomField>
    <fullName>OptiMax_Error_Email2__c</fullName>
    <description>Email address copied from dispatch process. Can be used to send pre-calculation failures</description>
    <label>OptiMax Error Email2</label>
    <type>Email</type>
</CustomField>