All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/OptiMax_Error_Occurred__c.field-meta.xml
<CustomField>
    <fullName>OptiMax_Error_Occurred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an error occurred when performing pre-calculations for OptiMax</description>
    <label>OptiMax Error Occurred</label>
    <type>Checkbox</type>
</CustomField>