All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/OptiMax_Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>OptiMax_Last_Run_Time__c</fullName>
    <description>Last time the work order processed by OptiMax</description>
    <label>OptiMax Last Run Time</label>
    <type>DateTime</type>
</CustomField>