All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/OptiMax_Status__c.field-meta.xml
<CustomField>
    <fullName>OptiMax_Status__c</fullName>
    <description>OptiMax dispatch status for the work order</description>
    <label>OptiMax Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>