All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Optimizer_Connection_Name__c.field-meta.xml
<CustomField>
    <fullName>Optimizer_Connection_Name__c</fullName>
    <description>This field stores the Connection Instance Name.</description>
    <label>Optimizer Connection Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>