All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Type of service order: Field Service, Depot repair etc.</description>
    <inlineHelpText>Type of service order: Field Service, Depot repair etc.</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depot Repair</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
                <default>true</default>
                <label>Field Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>