All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact, set by trigger.</description>
    <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders (Partner Contact)</relationshipLabel>
    <relationshipName>Service_Order_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>