All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Perform_Auto_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Perform_Auto_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perform Auto Entitlement</label>
    <type>Checkbox</type>
</CustomField>