All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/PM_Plan__c.field-meta.xml
<CustomField>
    <fullName>PM_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source PM plan that resulted in this preventive maintenance work order. Set by PM scheduler</description>
    <label>Preventive Maintenance Plan</label>
    <referenceTo>PM_Plan__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>