All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/PM_SC__c.field-meta.xml
<CustomField>
    <fullName>PM_SC__c</fullName>
    <description>Service Contract for which this preventive maintenance work order was created.</description>
    <formula>PM_Plan__r.Service_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Service Contract</label>
    <type>Text</type>
</CustomField>