All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Preferred_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred Business Hours</description>
    <label>Preferred Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>