All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Preferred_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_End_Time__c</fullName>
    <description>End time before which the work order must be scheduled. Calculated automatically based on booking window, SLA and access hours</description>
    <label>Preferred End Time</label>
    <type>DateTime</type>
</CustomField>