All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Preferred_Resource_Priority__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Resource_Priority__c</fullName>
    <description>Preferred Resource Priority is used in OptiMax to indicate the priority of assigning the work order to the Preferred Technician.</description>
    <label>Preferred Resource Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>