All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <description>Start time for the work order to be scheduled. Calculated automatically based on booking window, SLA and access hours</description>
    <label>Preferred Start Time</label>
    <type>DateTime</type>
</CustomField>