All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the preferred technician for the work order. Calculated from service contract, installed product or account wherever available</description>
    <label>Preferred Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Work Orders (Preferred Technician)</relationshipLabel>
    <relationshipName>Service_Order_Pref_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>