All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Previous_Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Previous_Scheduled_Date_Time__c</fullName>
    <description>Holds the previous Scheduled Date Time of the work order, if the work order had been scheduled previously.</description>
    <label>Previous Scheduled Date Time</label>
    <type>DateTime</type>
</CustomField>