All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <description>Detailed description of the problem as reported by the customer</description>
    <inlineHelpText>Detailed description of the problem as reported by the customer</inlineHelpText>
    <label>Problem Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>