All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <label>Proforma Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>