All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Proforma_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Amount__c</fullName>
    <description>Total Amount which is invoiced to the customer for the work performed.</description>
    <inlineHelpText>Total Amount which is invoiced to the customer for the work performed.</inlineHelpText>
    <label>Proforma Invoice Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>