All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <description>If the Order Type is Field Service, specific reason for the field visit.</description>
    <inlineHelpText>If the Order Type is Field Service, specific reason for the field visit.</inlineHelpText>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Deinstallation</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>