All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Qualified_Technicians__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Technicians__c</fullName>
    <label>Qualified Technicians</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>