All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Rate_Pricing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pricing_Rule__c</fullName>
    <label>Rate (Pricing Rule)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>