All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Rate_Type_Pricing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type_Pricing_Rule__c</fullName>
    <label>Rate Type (Pricing Rule)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>NTE</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>