All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Resolution_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Customer_By__c</fullName>
    <description>Date/time by which work order should be resolved as per customer commitment in SLA. Calculated automatically</description>
    <label>Resolution Customer By</label>
    <type>DateTime</type>
</CustomField>