All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Restoration_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Customer_By__c</fullName>
    <description>Date/time by which customer should be restored as per customer commitment in SLA. Calculated automatically</description>
    <label>Restoration Customer By</label>
    <type>DateTime</type>
</CustomField>