All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Root cause of the failure.</description>
    <inlineHelpText>Root cause of the failure.</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample Value1</fullName>
            </value>
            <value>
                <fullName>Sample Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>