All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Schedule_As_A_Dependent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Schedule_As_A_Dependent_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule As Dependent Work Order</label>
    <type>Checkbox</type>
</CustomField>