All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <description>Scheduled date for the work order</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>