All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Scheduling_Change_Token__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Change_Token__c</fullName>
    <label>Scheduling Change Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>