All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Service_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Duration__c</fullName>
    <description>Duration in seconds required for the work order. Calculated from rules by OptiMax pre-calculation engine</description>
    <label>Service Duration (in Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>