All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service group that is working on the service order.</description>
    <inlineHelpText>Name of the service group that is working on the service order.</inlineHelpText>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>