All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Service_Zone_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Zone_ID__c</fullName>
    <description>Service zone for territory.</description>
    <label>Service Zone ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>