All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SLA_Clock_Extension_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Clock_Extension_Minutes__c</fullName>
    <label>SLA Clock Extension Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>