All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SLA_Clock_Pause_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Clock_Pause_Time__c</fullName>
    <label>SLA Clock Pause Time</label>
    <type>DateTime</type>
</CustomField>