All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SLA Terms</description>
    <label>SLA Terms</label>
    <referenceTo>Service_Level__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>