All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Capacity_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Capacity_Rule_Name__c</fullName>
    <description>Capacity Rule Name</description>
    <inlineHelpText>Capacity Rule Name</inlineHelpText>
    <label>Capacity Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>