All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Crew_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Crew_Id__c</fullName>
    <description>The Id of the Crew.</description>
    <label>Crew Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>