All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Crew_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Crew_Name__c</fullName>
    <description>The Name of the Crew to which this work order is assigned.</description>
    <label>Crew Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>