All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>SM_Estimated_Duration__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This is original estimated or planned service duration in minutes. Original estimation may be derived from past history, MTTS rules etc.</description>
    <inlineHelpText>This is original estimated or planned service duration in minutes. Original estimation may be derived from past history, MTTS rules etc.</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>