All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_In_Jeopardy__c.field-meta.xml
<CustomField>
    <fullName>SM_In_Jeopardy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the Work Order is &apos;In Jeopardy&apos; of missing a fulfillment deadline or promise or not progressing per the plan or schedule. A value of &apos;True&apos; means the Work Order fulfillment status is &apos;At Risk&apos;.</description>
    <label>In Jeopardy</label>
    <type>Checkbox</type>
</CustomField>