All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>SM_Integration_Source__c</fullName>
    <description>The record where it is created.</description>
    <label>Integration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
                <default>true</default>
                <label>Local</label>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>