All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Is_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_Change_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Work Order is created from the Change Order process.</description>
    <inlineHelpText>This field is used to indicate whether the Work Order is created from the Change Order process.</inlineHelpText>
    <label>Is FCO Work Order</label>
    <type>Checkbox</type>
</CustomField>