All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Life_Cycle_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Life_Cycle_Status__c</fullName>
    <description>The status of the Event.</description>
    <label>Life Cycle Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>