All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_LJS_Minimum_Schedule_Duration__c.field-meta.xml
<CustomField>
    <fullName>SM_LJS_Minimum_Schedule_Duration__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This is the minimum duration of event to be scheduled when splitting a long duration work order.</description>
    <inlineHelpText>This is the minimum duration of event to be scheduled when splitting a long duration work order.</inlineHelpText>
    <label>LJS Minimum Schedule Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>