All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Lock_Appointment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>SM_Lock_Appointment_Schedule__c</fullName>
    <description>Dispatcher confirms the appointment to lock it to technician assignment or to the arrival window.</description>
    <inlineHelpText>Dispatcher confirms the appointment to lock it to technician assignment or to the arrival window.</inlineHelpText>
    <label>Lock Appointment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lock in place</fullName>
            </value>
            <value>
                <fullName>Lock to arrival window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>