All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Ok_To_Arrive_Early__c.field-meta.xml
<CustomField>
    <fullName>SM_Ok_To_Arrive_Early__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether &apos;Ok to arrive early&apos; option was selected for this work order in the Calendar View Manage Appointments screen, when it was sent to ServicePower for booking as an SLA job.</description>
    <inlineHelpText>Indicates whether &apos;Ok to arrive early&apos; option was selected for this work order in the Calendar View Manage Appointments screen, when it was sent to ServicePower for booking as an SLA job.</inlineHelpText>
    <label>Ok To Arrive Early</label>
    <type>Checkbox</type>
</CustomField>