All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_PM_Activity__c.field-meta.xml
<CustomField>
    <fullName>SM_PM_Activity__c</fullName>
    <description>Formula field to get the configured Activity field from PM Plan</description>
    <formula>IF(Is_PM_Work_Order__c, TEXT(PM_Plan__r.SM_Adjustment_Activity_Date__c),null)</formula>
    <inlineHelpText>Formula field to get the configured Activity field from PM Plan</inlineHelpText>
    <label>PM Activity</label>
    <type>Text</type>
</CustomField>