All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Revised_Duration__c.field-meta.xml
<CustomField>
    <fullName>SM_Revised_Duration__c</fullName>
    <description>This is the current revised duration. Initially this is equal to the original estimated duration. This can constantly change due to supplemental service duration due to scope change and real time variances.</description>
    <formula>SM_Estimated_Duration__c + SM_Scope_Change__c + SM_Variance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the current revised duration. Initially this is equal to the original estimated duration. This can constantly change due to supplemental service duration due to scope change and real time variances.</inlineHelpText>
    <label>Revised Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>