All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Schedule_Violation_Penalty__c.field-meta.xml
<CustomField>
    <fullName>SM_Schedule_Violation_Penalty__c</fullName>
    <label>Schedule Violation Penalty</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>