All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Scheduled_Duration__c.field-meta.xml
<CustomField>
    <fullName>SM_Scheduled_Duration__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This is the total of all the scheduled service duration for the work order. This is the sum of service duration from all the events for the work order.</description>
    <inlineHelpText>This is the total of all the scheduled service duration for the work order. This is the sum of service duration from all the events for the work order.</inlineHelpText>
    <label>Scheduled Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>