All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Scheduling_Options__c.field-meta.xml
<CustomField>
    <fullName>SM_Scheduling_Options__c</fullName>
    <description>This is the Scheduling Option users can chose to update JDM fields and use LJS algorithm to split long lobs</description>
    <inlineHelpText>This is the Scheduling Option users can chose to update JDM fields and use LJS algorithm to split long lobs</inlineHelpText>
    <label>Scheduling Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JDM and LJS Enabled</fullName>
                <default>true</default>
                <label>JDM and LJS Enabled</label>
            </value>
            <value>
                <fullName>JDM Enabled, LJS Disabled</fullName>
            </value>
            <value>
                <fullName>All options disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>