All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_SLA_Resolution__c.field-meta.xml
<CustomField>
    <fullName>SM_SLA_Resolution__c</fullName>
    <description>Number of minutes Configured in the SLA Rule for Resolution.</description>
    <inlineHelpText>Number of minutes Configured in the SLA Rule for Resolution.</inlineHelpText>
    <label>SLA Resolution</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>