All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Unscheduled_Duration__c.field-meta.xml
<CustomField>
    <fullName>SM_Unscheduled_Duration__c</fullName>
    <description>This is the duration still unscheduled.</description>
    <formula>SM_Revised_Duration__c  -  SM_Scheduled_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the duration still unscheduled.</inlineHelpText>
    <label>Unscheduled Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>