All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/SM_Variance__c.field-meta.xml
<CustomField>
    <fullName>SM_Variance__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This is the supplemental service duration to the original estimated service duration. This deviation is due to ongoing changes from the original estimate. Ongoing Deviation Due to Variances along with scope change is added to the original estimated duration to get the revised service duration.</description>
    <inlineHelpText>This is the supplemental duration to the original estimated duration. This deviation is due to ongoing changes from the original estimate and due to Variances along with scope change is added to the original estimate duration to get the revised duration</inlineHelpText>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>