All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Relevant instructions for future service events for the same product/customer</description>
    <inlineHelpText>Relevant instructions for future service events for the same product/customer</inlineHelpText>
    <label>Special Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>