All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Started_Driving_To_Location_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Driving_To_Location_Date_Time__c</fullName>
    <description>Date and time when technician starts driving towards the work order location</description>
    <inlineHelpText>Date and time when technician starts driving towards the work order location</inlineHelpText>
    <label>Started Driving To Location Date Time</label>
    <type>DateTime</type>
</CustomField>